# AbyssVision

./: .gitignore  CMakeLists.txt  README.MD  drifter.xcf  sprites.ata  test_atlas.ata  ui.ata
glad/include/glad/: glad.h
glad/src/: glad.c
include/: agl.h  aogl.h  aparams.h  application.h  astring.h  button.h  colors.h  core.h  emptywindow.h  gamecore.h  graphics.h  input.h  mainwindow.h  renderer.h  resources.h  simplegl.h  solidgroup.h  structs.h  style.h  systemgroup.h  timeparams.h  widget.h  window.h  windowproperty.h  windowsgroup.h  wparams.h
include/widgets/: button.h  lineedit.h  trackbar.h
shaders/: clearVertex.glsl  colorFragment.glsl  colorVertex.glsl  controlFragment.glsl  controlVertex.glsl  defaultVertex.glsl  icolorf.glsl  icolorv.glsl  interfacef.glsl  interfacev.glsl  itexturef.glsl  itexturev.glsl  textureFragment.glsl  textureVertex.glsl
src/: agl.cpp  aogl.cpp  aparams.cpp  application.cpp  astring.cpp  button.cpp  core.cpp  emptywindow.cpp  gamecore.cpp  graphics.cpp  main.cpp  mainwindow.cpp  renderer.cpp  resources.cpp  simplegl.cpp  solidgroup.cpp  systemgroup.cpp  timeparams.cpp  widget.cpp  window.cpp
src/widgets/: button.cpp  lineedit.cpp  trackbar.cpp
